--- a/index.html
+++ b/index.html
@@ -71,5 +71,25 @@
             </section>
         </div>
 
+        <div class="clock">
+        <div>
+            <span id="hour">00</span>
+            <span class="text">Hours</span>
+        </div>
+        <div>
+            <span id="minutes">00</span>
+            <span class="text">Minutes</span>
+        </div>
+        <div>
+            <span id="seconds">00</span>
+            <span class="text">Seconds</span>
+        </div>
+        <div>
+            <span id="ampm">AM</span>
+ 
+        </div>
+    </div>
+    <script src="firstscript.js"></script>
+
     </body>
 </html>
