--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> First Project</title>
         <link rel="stylesheet" href="firststyle.css"/>
-        <script src="firstscript.js"></script>
+      //  <script src="firstscript.js"></script>
 
     </head>
 
@@ -89,7 +89,7 @@
  
         </div>
     </div>
-    
+    <script src="firstscript.js"></script>
 
     </body>
 </html>
